crates/compiler/src/tests/e2e/good/0425_closure_values_and_calls/main.gom
fn main() {
    let f: (int32, int32) -> int32 = |a, b| a + b;
    let g: (int32) -> (int32) -> int32 = |a| |b| a * b;
    
    println(f(3, 4).to_string());
    println(g(3)(4).to_string());
}
