crates/compiler/src/tests/e2e/bad/0014_wrong_func_arity/main.gom
fn multiply(a: int32, b: int32) -> int32 {
  a * b
}

fn main() -> unit {
  let _ = multiply(2, 3, 4);
  ()
}
